--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,21 @@ cache:
 
 script: "./gradlew clean build"
 
+before_deploy:
+  - zip -r ahn-springboot-webservice
+  - mkdir -p deploy
+  - mv ahn-springboot-webservice.zip deploy/ahn-springboot-webservice.zip
+deploy:
+  - provider: s3
+    access_key_id: $AWS_ACCESS_KEY
+    secret_access_key: $AWS_SECRET_KEY
+    bucket: ahn-springboot-build
+    region: ap-northeast-2
+    skip_cleanup: true
+    acl: private
+    local_dir: deploy
+    wait_until-deployed: true
+
 # C 실행 완료시 메일로 알람
 notifications:
   email:
