--- a/.travis.yml
+++ b/.travis.yml
@@ -29,6 +29,17 @@ deploy:
     local_dir: deploy
     wait_until-deployed: true
 
+  - provider: codedeploy
+    access_key_id: $AWS_ACCESS_KEY
+    secret_access_key: $AWS_SECRET_KEY
+    bucket: ahn-springboot-build
+    key: ahn-springboot-webservice.zip
+    bundle_type: zip
+    application: ahn-springboot-webservice
+    deployment_group: ahn-springboot-webservice-group
+    region: ap-northeast-2
+    wait-until-deployed: true
+
 # C 실행 완료시 메일로 알람
 notifications:
   email:
