--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ deploy:
     access_key_id: $AWS_ACCESS_KEY
     secret_access_key: $AWS_SECRET_KEY
     bucket: ahn-springboot-build
-    region: us-east-2
+    region: ap-northeast-2
     skip_cleanup: true
     acl: private
     local_dir: deploy
