--- a/.travis.yml
+++ b/.travis.yml
@@ -15,9 +15,13 @@ cache:
 script: "./gradlew clean build"
 
 before_deploy:
-  - zip -r ahn-springboot-webservice *
-  - mkdir -p deploy
-  - mv ahn-springboot-webservice.zip deploy/ahn-springboot-webservice.zip
+  - mkdir -p before-deploy
+  - cp scripts/*.sh before-deploy/
+  - cp appspec.yml before-deploy/
+  - cp build/libs/*.jar before-deploy/
+  - cp before-deploy && zip -r before-deploy
+  - cd ../ && mkdir -p deploy
+  - mv before-deploy/before-deploy.zip deploy/ahn-springboot-webservice.zip
 deploy:
   - provider: s3
     access_key_id: $AWS_ACCESS_KEY
